# Amadeus

./: .gitignore  README.md  README.md.backup  pyproject.toml  setup.ps1  setup.sh
docs/: ARCHITECTURE.md  CUSTOMIZATION.md  DEMO_SHOTLIST.md  HOW_IT_WORKS.md  ROADMAP.md
docs/adr/: 0001-tech-stack.md
src/amadeus/: __init__.py  app.py  avatar.py  cli.py  config.py  settings_store.py
src/amadeus/cognition/: __init__.py  consolidation.py  emotions.py  engine.py  keywords.py  prompt.py  stream_filter.py
src/amadeus/events/: __init__.py  bus.py
src/amadeus/llm/: __init__.py  base.py  ollama.py
src/amadeus/memory/: __init__.py  archive.py  embeddings.py  models.py  retrieval.py  state.py  store.py
src/amadeus/persona/: __init__.py  loader.py  profile.py
src/amadeus/server/: app.py
src/amadeus/server/static/: avatar.js  index.html
src/amadeus/utils/: timefmt.py
src/amadeus/voice/: __init__.py  chunker.py  controller.py  providers.py  vad.py
tests/: test_avatar.py  test_bus_and_embeddings.py  test_cognition.py  test_consolidation.py  test_emotions.py  test_engine.py  test_persona_loader.py  test_reset.py  test_retrieval.py  test_server.py  test_settings_panel.py  test_store.py  test_voice.py
